# mdsh

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.sh  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  _config.yml  build.rs  ci.sh  default.nix  flake.nix  profile.nix  shell.nix  spec.clear.md  spec.processed.md
.github/: main.workflow
.github/workflows/: ci.yaml
nix/: sources.json
samples/: code.rb  example.md  gen-env.sh  gen-md.sh  gen-yml.sh
src/: cli.rs  executor.rs  gen_test_md.rs  lib.rs  main.rs  nom_ext.rs  parser.rs
