[package]
name = "mdsh"
version = "0.7.0"
authors = ["zimbatm <zimbatm@zimbatm.com>"]
edition = "2018"
description = "Markdown shell pre-processor"
homepage = "https://github.com/zimbatm/mdsh"
repository = "https://github.com/zimbatm/mdsh"
keywords = [
  "markdown",
  "shell",
]
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "zimbatm/mdsh"

[dependencies]
difference = "2.0.0"
lazy_static = "1.4.0"
regex = "1.7.3"
structopt = "0.3.26"
