[package]
name = "mdsh"
version = "0.9.2"
authors = ["zimbatm <zimbatm@zimbatm.com>"]
edition = "2021"
description = "Markdown shell pre-processor"
homepage = "https://github.com/zimbatm/mdsh"
repository = "https://github.com/zimbatm/mdsh"
keywords = [
  "markdown",
  "shell",
]
readme = "README.md"
license = "MIT"
default-run = "mdsh"

[[bin]]
name = "gen-test-md"
path = "src/gen_test_md.rs"

[badges.travis-ci]
repository = "zimbatm/mdsh"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4", features = ["derive"] }
nom = { version = "8.0.0", default-features = false }
nom-language = "0.1.0"
shellexpand = { version = "3", default-features = false, features = ["base-0"] }

[dev-dependencies]
dedent = "0.1.1"
